# docs/swagger.json
@@ -49,6 +49,12 @@
                             }
                         }
                     },
+                    "202": {
+                        "description": "Match is already being processed",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.MessageResponseType"
+                        }
+                    },
                     "400": {
                         "description": "Glyphs parse error",
                         "schema": {
